# soccerprediction

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat  paracode  unicode
docs/: example_odds.json
scripts/: check_ingest.py  check_soccerdata.py  predict_fixture.py  run_pipeline.py  run_predict_plus.py  smoke_all_sources.py
src/soccermodel/: __init__.py  advanced_features.py  data_sources.py  dc_engine_v2.py  game_state_simulator.py  market_pricing.py  odds_adapter.py  opponent_adjuster.py  report.py
src/soccermodel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/soccermodel/models/: corners_cards.py  goals_dc.py
src/soccerprediction/: datahub.py
src/soccerprediction/evaluation/: calibration.py
src/soccerprediction/features/: advanced.py
src/soccerprediction/ingest/: fbref.py  understat.py  whoscored.py
src/soccerprediction/markets/: props.py
src/soccerprediction/models/: bivariate_poisson.py  dixon_coles.py
src/soccerprediction/odds/: vig.py
src/soccerprediction/reporting/: fixture_report.py
src/soccerprediction/sim/: inplay.py
src/soccerprediction/utils/: health_checks.py  names.py
