[build-system]
requires = ["setuptools>=66", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soccermodel"
version = "0.0.6"
description = "End-to-end soccer market modeling pipeline using soccerdata"
requires-python = ">=3.9"
readme = "README.md"
dependencies = []
[tool.setuptools]
package-dir = {"" = "src"}
packages = ["soccermodel", "soccermodel.models"]
